# farm-ng-cmake

./: .gitignore  CMakeLists.txt  LICENSE  bootstrap_venv.sh  farm_ng_module.cmake  farm_ng_moduleConfig.cmake.in  install_deps_ubuntu.sh
.github/workflows/: release.yml
cmake/: External_apriltag.cmake  External_ceres.cmake  External_cli11.cmake  External_eigen.cmake  External_expected.cmake  External_farm-ng-cmake.cmake  External_fmt.cmake  External_grpc.cmake  External_libdatachannel.cmake  External_subdir_Sophus.cmake  External_subdir_farm-ng-core.cmake  farm_ng_add_library.cmake  farm_ng_add_protobufs.cmake  farm_ng_add_test.cmake  farm_ng_cmakeConfig.cmake  farm_ng_default_args.cmake  farm_ng_module.cmake  farm_ng_moduleConfig.cmake.in
scripts/: download_release.sh  install_deps_mac.sh  install_deps_ubuntu.sh
